# toolbox

./: .gitignore  Cargo.toml  README.md  Toolbox.sln  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
Toolbox/: CsvSplitResult.cs  CsvSplitter.cs  CsvSplitterOptions.cs  Program.cs  Toolbox.csproj
ToolboxTests/: CsvSplitterTests.cs  ToolboxTests.csproj
ToolboxTests/CsvScenarios/: without_header.csv
app/: Cargo.toml  build.rs  tauri.conf.json  updater.json
app/capabilities/: desktop.json
app/src/: context.rs  main.rs  panic.rs  setup.rs  utils.rs
app/src/handler/: app.rs  dev.rs  driver.rs  error.rs  handlers.rs  handles.rs  memory.rs  mod.rs  network.rs  process.rs  program.rs
app/src/models/: mod.rs  network.rs  services.rs
app/src/services/: device_class.rs  disk.rs  handle.rs  installed_driver.rs  loaded_driver.rs  memory.rs  mod.rs  net_table.rs  process.rs  programs.rs  save_screenshot.rs  tcp_table.rs  utils.rs  wmii.rs
app/src/updater/: builder.rs  fake.rs  manager.rs  mod.rs  plugin.rs  status.rs  traits.rs
src/: app.rs  main.rs  route.rs  state.rs
src/components/: icons.rs  mod.rs
src/pages/: home.rs  not_found.rs
styles/: main.css  output.css
utils/resize-image/: Cargo.toml
utils/resize-image/src/: main.rs
utils/winapi-playground/: Cargo.toml
utils/winapi-playground/src/: api.rs  main.rs
web/: .prettierrc  package-lock.json  package.json  svelte.config.js  vite.config.ts
web-asm/: Cargo.toml
web-asm/src/: lib.rs  macros.rs
web/src/: app.css  app.d.ts  app.html
web/src/lib/: api.ts  stores.ts
web/src/lib/components/: Footer.svelte  Header.svelte  Item.svelte  Navigation.svelte  Pagination.svelte  Tooltip.svelte
web/src/lib/types/: index.ts  misc.ts  services.ts  updater.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
web/src/routes/(app)/: +layout.svelte  +page.svelte  Dashboard.svelte  home.svelte
web/src/routes/(app)/driver/: +page.svelte  List.svelte
web/src/routes/(app)/handles/: +page.svelte
web/src/routes/(app)/home/: +page.svelte  Navigation.svelte  ProcessNode.svelte
web/src/routes/(app)/memory/: +page.svelte  MemoryInfo.svelte
web/src/routes/(app)/net-table/: List.svelte
web/src/routes/(app)/process/: +page.svelte  ProcessNode.svelte  Processes.svelte
web/src/routes/(app)/process/[id]/: +page.svelte
web/src/routes/(app)/programs/: +page.svelte  Programs.svelte
web/src/routes/(app)/tcp-table/: List.svelte
web/src/routes/dev/: +layout.svelte  +page.svelte
web/src/routes/loader/: +page.svelte
