[package]
name = "toolbox"
version = "0.1.0"
description = ""
authors = ["Jozef Podlecki"]
license = ""
repository = "https://github.com/Jozefpodlecki/toolbox"
default-run = "toolbox"
edition = "2024"
rust-version = "1.90.0"

[lib]
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
tar = "0.4.44"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.1", features = ["image-png", "tray-icon"] }
bitflags = "2.10.0"
hashbrown = { version = "0.16.0", features = ["serde"] }
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
duckdb = { version = "1.4.1", features = ["bundled", "modern-full"] }
tokio = { version = "1.48.0", features = ["rt", "macros"] }
serde_with = "3.15.1"
log = "0.4.28"
flexi_logger = { version = "0.31.7", default-features = false }
reqwest = { version = "0.12", features = ["json", "gzip"] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }
moka = { version = "0.12.7", features = ["sync"] }
rfd = { version = "0.15", features = ["common-controls-v6"] }
rsntp = { version = "4.0.0", default-features = false, features = ["chrono"] }
flate2 = "1.0.30"
thiserror = "2.0.16"
strum = "0.27"
strum_macros = "0.27"
async-trait = "0.1.89"
semver = "1.0.27"
sha256 = "1.6.0"
tar = "0.4.44"
netstat = "0.7.0"
ipnetwork = "=0.20.0"
etherparse = "0.19.0"
axum = { version = "0.8.6" }
oauth2 = "4.3"
notify = "8.2.0"
rand = "0.9.2"
dirs = "6.0.0"
winapi = { version = "0.3.9", features = ["everything"] }
widestring = "1.2.1"
wmi = { version = "0.18.0", features = ["chrono"] }
base64 = "0.22.1"
data-url = "0.3.2"
ntapi = "0.4.1"

[dependencies.windows]
version = "0.62.2"
features = [
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-log = "2.7.0"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-websocket = "=2.4.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[profile.dev.package."*"]
debug = false # Disable debug symbols for dependencies

[profile.dev]
incremental = true
opt-level = 0
