[package]
name = "toolbox-wasm"
version = "0.1.0"
authors = ["Jozef Podlecki <jozef.witold.podlecki@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.41"
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
console_log = { version = "1", optional = true }
cfg-if = "1.0.0"
log = "0.4.26"
csscolorparser = "0.7.0"

[features]
default = ["console_log"]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
rand = "0.9.0"
mockall = "0.13.1"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'DomImplementation',
    'DomTokenList',
    'EventTarget',
    'Element',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'SvgImageElement',
    'CanvasRenderingContext2d',
    'HtmlElement',
    'MouseEvent',
    'KeyboardEvent',
    'KeyEvent',
    'TextMetrics',
    'Node',
    'Window',
    'Performance',
    'PerformanceTiming',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation',
    'WebGlTexture',
    'WebGlFramebuffer',
    'WebGlRenderbuffer'
]
