[package]
name = "winapi-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["everything"] }

[dependencies.windows]
version = "0.62.2"
features = [
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemInformation",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]